--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+	height: 100%;
+}
+
+body {
+	background-image: url("assets/images/rosebg.jpg");
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
