Add Party & Registry pages; Style Nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-nav></app-nav>
-<router-outlet></router-outlet>
+<header>
+	<app-nav></app-nav>
+</header>
+
+<main>
+	<router-outlet></router-outlet>
+</main>
