--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,1 +1,8 @@
-<p>nav works!</p>
+<mat-toolbar class="navbar">
+	<div>James & Claudia</div>
+	<div class="navLinks">
+		<span routerLink="details">Details</span>
+		<span routerLink="party">Wedding Party</span>
+		<span routerLink="registry">Registry</span>
+	</div>
+</mat-toolbar>
