--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-html {
+@import url('https://fonts.googleapis.com/css2?family=Tangerine&display=swap');
+
+* {
+	outline: none;
+}
+
+html, body {
 	height: 100%;
 }
 
@@ -8,4 +14,6 @@ body {
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	margin: 0;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
