--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ html, body {
 
 body {
 	background-image: url("assets/images/rosebg.jpg");
-	background-position: center;
+	background-position-x: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 	margin: 0;
