--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -3,6 +3,7 @@
 	font-family: 'Tangerine', cursive;
 	font-size: 3em;
 	height: 3em;
+	background-color: transparent;
 	background-image: linear-gradient(#ffb6c2 -25%, transparent);
 
 	span {
@@ -10,7 +11,7 @@
 	}
 
 	.navLinks {
-		font-size: 20px;
+		font-size: 25px;
 		font-weight: bold;
 
 		span {
