--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,7 +1,7 @@
 .navbar {
 	justify-content: space-between;
 	font-family: 'Tangerine', cursive;
-	font-size: 3em;
+	font-size: 50px;
 	height: 3em;
 	background-color: transparent;
 	background-image: linear-gradient(#ffb6c2 -25%, transparent);
