Add basic details

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,1 +1,23 @@
-<div>landing works!</div>
+<section class="container text-center">
+	<div class="invite text-center">
+		<main>
+			<p>Please join us</p>
+			<p class="fancy">December 11, 2021</p>
+			<p>in</p>
+			<p class="fancy">Colorado Springs, Colorado</p>
+			<p>to celebrate the marriage of</p>
+			<p class="fancy">
+				<span>James Kline</span>
+				<span>&</span>
+				<span>Claudia Falk</span>
+			</p>
+		</main>
+
+		<section>Attire: Semi-formal (Suit and tie and cocktail dresses)</section>
+	</div>
+
+</section>
+<section class="container text-center mt-5 actions">
+	<button class="btn btn-lg btn-outline-dark" (click)="rsvp()">RSVP</button>
+</section>
+
