--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -24,6 +24,10 @@
 	}
 }
 
+.active {
+	text-decoration: underline;
+}
+
 @media only screen and (max-width: 450px) {
 	.navbar {
 		display: block;
