--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -3,6 +3,7 @@
 	<div class="navLinks">
 		<span routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Details</span>
 		<span routerLink="party" routerLinkActive="active">Wedding Party</span>
+		<span routerLink="photos" routerLinkActive="active">Photos</span>
 		<span routerLink="registry" routerLinkActive="active">Registry</span>
 		<span *ngIf="isAdmin" routerLink="admin" routerLinkActive="active">Admin</span>
 		<app-logout *ngIf="(auth.isAuthenticated$ | async)"></app-logout>
