--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -43,6 +43,11 @@
 		<td mat-cell *matCellDef="let element">{{element.attending}}</td>
 	</ng-container>
 
+	<ng-container matColumnDef="parentId">
+		<th mat-header-cell *matHeaderCellDef>Parent ID</th>
+		<td mat-cell *matCellDef="let element">{{element.parentId}}</td>
+	</ng-container>
+
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 	<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
