--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,9 +1,8 @@
-<table mat-table [dataSource]="guestList">
-	<ng-container matColumnDef="id">
-		<th mat-header-cell *matHeaderCellDef>ID</th>
-		<td mat-cell *matCellDef="let element">{{element.id}}</td>
-	</ng-container>
+<div *ngIf="guestList" class="container font-weight-bold text-center">
+	<div>Invited: {{getInvitedCount()}}</div>
+</div>
 
+<table mat-table [dataSource]="guestList">
 	<ng-container matColumnDef="name">
 		<th mat-header-cell *matHeaderCellDef>Name</th>
 		<td mat-cell *matCellDef="let element">{{element.firstName}} {{element.lastName}}</td>
@@ -33,11 +32,6 @@
 		<td mat-cell *matCellDef="let element">{{element.guestRole}}</td>
 	</ng-container>
 
-	<ng-container matColumnDef="reservedDate">
-		<th mat-header-cell *matHeaderCellDef>Reserved On</th>
-		<td mat-cell *matCellDef="let element">{{element.reservedDate}}</td>
-	</ng-container>
-
 	<ng-container matColumnDef="attending">
 		<th mat-header-cell *matHeaderCellDef>Attending?</th>
 		<td mat-cell *matCellDef="let element">{{element.attending}}</td>
@@ -46,6 +40,11 @@
 	<ng-container matColumnDef="parentId">
 		<th mat-header-cell *matHeaderCellDef>Parent ID</th>
 		<td mat-cell *matCellDef="let element">{{element.parentId}}</td>
+	</ng-container>
+
+	<ng-container matColumnDef="guests">
+		<th mat-header-cell *matHeaderCellDef>Add. Guests Allowed</th>
+		<td mat-cell *matCellDef="let element">{{element.allowedPlusOnes}}</td>
 	</ng-container>
 
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
