Add disclaimer for children

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -14,10 +14,22 @@
 		</main>
 
 		<section>Attire: Semi-formal (Suit and tie and cocktail dresses)</section>
+
+		<section class="container text-bold text-center disclaimer">
+			<span>Unfortunately we are only able to accommodate </span>
+			<span>children in the wedding party at our reception. We love your kids but thought </span>
+			<span>you might like a night off. <br>Adults only please!</span>
+		</section>
 	</div>
 
 </section>
 <section class="container text-center mt-5 actions">
 	<button class="btn btn-lg btn-outline-dark" (click)="rsvp()">RSVP</button>
 </section>
+
+<!--<section class="container text-bold text-center disclaimer">-->
+<!--	<span>Unfortunately we are only able to accommodate </span>-->
+<!--	<span>children in the wedding party at our reception. We love your kids but thought </span>-->
+<!--	<span>you might like a night off. Adults only please!</span>-->
+<!--</section>-->
 
