--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -30,6 +30,10 @@
 	max-height: initial;
 }
 
+.disclaimer {
+	font-size: 14px;
+}
+
 @media only screen and (max-width: 450px) {
 	.fancy {
 		span {
