--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -60,6 +60,13 @@
 			</td>
 		</ng-container>
 
+		<ng-container matColumnDef="code">
+			<th mat-header-cell *matHeaderCellDef>Code</th>
+			<td mat-cell *matCellDef="let element">
+				<mat-checkbox [checked]="element.inviteCode"></mat-checkbox>
+			</td>
+		</ng-container>
+
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 	</table>
