--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -62,9 +62,7 @@
 
 		<ng-container matColumnDef="code">
 			<th mat-header-cell *matHeaderCellDef>Code</th>
-			<td mat-cell *matCellDef="let element">
-				<mat-checkbox [checked]="element.inviteCode"></mat-checkbox>
-			</td>
+			<td mat-cell *matCellDef="let element">{{element.inviteCode}}</td>
 		</ng-container>
 
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
