--- a/src/app/components/registry/registry.component.html
+++ b/src/app/components/registry/registry.component.html
@@ -1,15 +1,15 @@
 <div class="container text-center">
 	<div class="d-flex flex-wrap justify-content-around align-content-center">
-		<a href="//tgt.gifts/oncloudkline21" target="_blank" class="my-auto">
+		<a href="//www.target.com/gift-registry/giftgiver?registryId=e37a6af9fa194f5bba91f2c0afb6bb3d" target="_blank" class="my-auto">
 			<img alt="Target Registry" src="assets/images/target-logo.png" class="reg-img">
 		</a>
 
-		<a href="//https://www.potterybarn.com/registry/wxrbcf8pd6/registry-list.html" target="_blank" class="my-auto">
+		<a href="//www.potterybarn.com/registry/wxrbcf8pd6/registry-list.html" target="_blank" class="my-auto">
 			<img alt="Pottery Barn Registry" src="assets/images/pb-logo.png" class="reg-img">
 		</a>
 
 		<a href="//www.walmart.com/lists/view-wedding-registry-items?id=d21a39de-3136-481a-990c-a5fa923a2549" target="_blank" class="my-auto">
-			<img alt="Pottery Barn Registry" src="assets/images/wm-logo.png" class="reg-img">
+			<img alt="Walmart Registry" src="assets/images/wm-logo.png" class="reg-img">
 		</a>
 	</div>
 </div>
