--- a/src/app/components/registry/registry.component.html
+++ b/src/app/components/registry/registry.component.html
@@ -1,5 +1,5 @@
 <div class="container text-center">
-	<div class="d-flex flex-wrap justify-content-around align-content-center">
+	<div class="d-flex flex-wrap justify-content-around align-content-center reg-wrapper">
 		<a href="//www.target.com/gift-registry/giftgiver?registryId=e37a6af9fa194f5bba91f2c0afb6bb3d" target="_blank" class="my-auto">
 			<img alt="Target Registry" src="assets/images/target-logo.png" class="reg-img">
 		</a>
