--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-	background: #fff url('assets/images/rosebg.jpg') no-repeat center;
+	background: #fff url('assets/images/rosebg.jpg') no-repeat fixed center;
 	background-size: cover;
 	margin: 0;
 	font-family: $font-stack;
