Add hotel info dialog

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -24,5 +24,6 @@
 
 </section>
 <section class="container text-center mt-5 actions">
-	<button class="btn btn-lg btn-outline-dark" (click)="rsvp()">RSVP</button>
+	<button class="btn btn-lg btn-outline-dark" (click)="rsvp()">RSVP</button><br>
+	<button class="btn btn-lg btn-outline-dark mt-3" (click)="hotel()">Hotel Info</button>
 </section>
