--- a/src/app/components/rsvp-dialog/rsvp-dialog.component.html
+++ b/src/app/components/rsvp-dialog/rsvp-dialog.component.html
@@ -65,7 +65,7 @@
 						</mat-form-field>
 
 						<mat-form-field>
-							<mat-label>First Name</mat-label>
+							<mat-label>Last Name</mat-label>
 							<input matInput
 								   placeholder="Last Name"
 								   formControlName="lastName"
