Adjust landing details & add new photos

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,19 +1,28 @@
 <section class="container text-center">
-	<div class="invite text-center">
+	<div class="invite text-center text-uppercase">
 		<main>
-			<p>Please join us</p>
-			<p class="fancy">December 11, 2021</p>
-			<p>in</p>
-			<p class="fancy">Colorado Springs, Colorado</p>
-			<p>to celebrate the marriage of</p>
-			<p class="fancy">
-				<span>James Kline</span>
-				<span>&</span>
+			<p>Please join us for the</p>
+			<p class="fancy">Wedding</p>
+			<p>of</p>
+			<p class="fancy names">
+				<span>James Kline </span>
+				<span>& </span>
 				<span>Claudia Falk</span>
 			</p>
 		</main>
 
-		<section>Attire: Semi-formal (Suit and tie and cocktail dresses)</section>
+		<section>
+			<p>Saturday, December 11, 2021</p>
+			<p>At 4 o'clock in the afternoon</p>
+		</section>
+
+		<section class="mt-5">
+			<p class="font-italic">Black Forest by Wedgewood Weddings</p>
+			<p>12375 Black Forest Rd</p>
+			<p>Colorado Springs, CO 80908</p>
+		</section>
+
+		<section class="mt-5">Attire: Semi-formal (Suit and tie and cocktail dresses)</section>
 
 		<section class="container text-bold text-center disclaimer">
 			<span>Unfortunately we are only able to accommodate </span>
